# mcpm

./: .gitignore  .release.env  Cargo.toml  README.md  catalog-info.yaml
.github/workflows/: copilot-code-review.yml  copilot-review.yml  rust-code-review.yml
Formula/: ..rb  mcpm.rb
src/: app.rs  error.rs  lib.rs  main.rs  message.rs
src/ide/: claude_code.rs  claude_desktop.rs  codex.rs  continue_dev.rs  cursor.rs  github_copilot.rs  mod.rs  traits.rs  vscode.rs  windsurf.rs
src/model/: config.rs  mod.rs  server.rs  state.rs
src/registry/: mod.rs  official.rs  smithery.rs  traits.rs
src/services/: installer.rs  mod.rs  sync_service.rs
src/view/: mod.rs
src/view/components/: ide_tabs.rs  mod.rs  search_bar.rs  server_list.rs  status_bar.rs
src/view/screens/: dashboard.rs  installed.rs  mod.rs  registry.rs  server_detail.rs  sync.rs
