[package]
name = "mcpm"
version = "2026.7.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP & Serialization
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
dirs = "6.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
urlencoding = "2.1"
